@@ -14,4 +14,16 @@ class UserMailer < ActionMailer::Base
       tag:      "new_user"
     )
   end
+
+  def welcome_email(user_id)
+    @user = User.find(user_id)
+    @url = url_for(edit_user_registration_path(only_path: false, protocol: 'https'))
+    mail(
+      from:     "WorldMathaba <inbox@worldmathaba.net>",
+      sender:   "inbox@worldmathaba.net",
+      reply_to: "inbox@worldmathaba.net",
+      to:       @user.email.to_s,
+      subject:  "Welcome to World Mathaba"
+    )
+  end
 end
