@@ -1,11 +1,12 @@
 require 'spec_helper'
 
 describe User do
+  require 'sidekiq/testing/inline'
 
   describe "with Job Queues" do
-    require 'sidekiq/testing'
-    it "should enqueue the new user email" do
-      ->{FactoryGirl.create(:user) }.should change(NewUserMail.jobs, :count).by(1)
+    it "should enqueue the new user email and welcome email" do
+      ->{ FactoryGirl.create(:user) }.should change(ActionMailer::Base.deliveries, :count).by(2)
     end
   end
+
 end
